# xai-transcribe

./: README.md  pyproject.toml  requirements.txt  transcribe_components.py
examples/: example.xircuits
