[project]
name = "xai-transcribe"
version = "0.1.0"
description = "Xircuits components for audio transcription with speaker diarization"
authors = [{ name = "XpressAI", email = "info@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xpressai/xai-transcribe"
keywords = ["xircuits", "audio", "transcription", "diarization", "whisper"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
